// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[RequestList] should match empty snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="request-list"
  >
    <div
      class="p-1 flex justify-between font-bold select-none bg-slate-100"
    >
      Requests
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;

exports[`[RequestList] should match requestful snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="request-list"
  >
    <div
      class="p-1 flex justify-between font-bold select-none bg-slate-100"
    >
      Requests
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    >
      <div
        class="select-none whitespace-nowrap overflow-hidden text-ellipsis"
      >
        <span>
          https://example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;
